Home - novo / Falta so o login e o carrinho

--- a/assets/css/metro-bootstrap.css
+++ b/assets/css/metro-bootstrap.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
   margin: 0;
   height: 100%;
+  background: #fff url('../imgs/background-body.jpg') top center repeat-x;
 }
 html,
 body,
