--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -47,6 +47,7 @@ hr.line {
 	text-align: right;
 	clear: both;
 	padding: 25px 10px;
+	margin: 0;
 }
 .link-padrao a {
 	color: #fff !important;
@@ -70,21 +71,23 @@ hr.line {
 }
 
 
-
 #ver-noticias {
 	display: block;
 	background-color: #3D89CF !important;
 	padding: 10px 0 !important;
-	margin-top: 15px;
 	font-size: 0.9em;
 	text-transform: uppercase;
 	text-align: center;
 	font-family: 'Open Sans Bold';
 	-webkit-box-shadow: 2px 2px 1px 1px #245F93;
 	box-shadow: 2px 2px 1px 1px #245F93;
-	width: 40%;
-	float: right;
-	color: #fff !important; 
+	color: #fff !important;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	margin-top: 10px;
+	position: absolute;
+	bottom: 5px;
+	width: 99%;
 }
 
 #ver-noticias:hover {
@@ -98,60 +101,14 @@ hr.line {
 
 /* ----Start------ */
 
-.container {
+#container {
 	padding-bottom: 25px;
+	margin: 10px 0 !important;
 }
 
 .border {
 	border: 1px solid red !important;
 	margin: 0 !important;
-}
-
-.horizontal-menu-top-home {
-	margin: 0 !important;
-	position: absolute;
-	right: 0;
-	bottom: 398px;
-	width: 65%;
-}
-.horizontal-menu-top {
-	margin: 0 !important;
-	position: absolute;
-	right: 0;
-	bottom: 68px;
-	width: 65%;
-}
-
-.horizontal-menu-top ul, .horizontal-menu-top-home ul {
-	list-style: none;
-	overflow: auto;
-	background-color: #3D89CF;
-	padding: 20px 10px;
-	margin: 0;
-}
-.horizontal-menu-top ul li, .horizontal-menu-top-home ul li {
- 	display: inline-block;
- 	float: left;
- 	font-size: 1.1em;
-}
-
-.horizontal-menu-top ul li a, .horizontal-menu-top-home ul li a {
-	color: #fff;
-	padding: 10px 15px;
-}
-
-.horizontal-menu-top ul li a:hover, .horizontal-menu-top-home ul li a:hover {
-	color: #fff;
-	background-color: #245F93;
-	text-decoration: none;
-	-webkit-border-radius: 5px 5px 5px 5px;
-	border-radius: 5px 5px 5px 5px;
-
-	-webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	-ms-transition: all 1s ease;
-	-o-transition: all 1s ease;
-	transition: all 1s ease;
 }
 
 /* Area do Aluno crie-conta */
@@ -247,81 +204,291 @@ hr.line {
 }
 
 #content-header-home {
-	height: 536px;
-	background-color: #417DB2;
-	position: relative;
+	height: 220px;
 }
 
 #content-header {
-	height: 206px;
+	height: 220px;
 	background-color: #417DB2;
-	position: relative;
+}
+
+#header-container {
+	margin: 0 auto;
+    width: 1140px !important;
+    position: relative;
+	height: 220px;
+}
+
+#logo {
+	position: absolute;
+	top: 61px;
+	left: 60px;
+}
+#aside-header-right {
+	position: absolute;
+	top: 66px;
+	right: 0;
+	width: 838px;
+}
+
+#search {
+	width: 524px;
+}
+
+#menu-header-first {
+	border: 1px solid #ccc;
+	margin: 10px 0;
+}
+
+#menu-header-first ul {
+	margin: 5px 0;
+}
+#menu-header-first ul li {
+}
+#menu-header-secund {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	background-color: #417DB2;
+	padding: 5px 0;
+}
+
+#menu-header-secund ul {
+	margin: 0;
+}
+#menu-header-secund ul li {
+	margin: 0 65px;
+	text-align: center;
+	text-transform: uppercase;
+}
+#menu-header-secund ul li a {
+	color: #fff;
+	font-family: 'Open Sans Bold';
+}
+
+#redes-sociais {
+	width: 205px;
+	right: 0;
+	top: 5px;
+	position: absolute;
+}
+#redes-sociais ul {
+	width: 185px;
+	overflow: auto;
+	margin: 0 auto;
+}
+
+#redes-sociais ul li {
+	display: inline-block;;
+	float: left;
+}
+
+#redes-sociais ul li a {
+	display: block;
+	width: 28px;
+	height: 31px;
+	text-indent: -99999px;
+	margin-left: 10px;
+
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+
+#redes-sociais ul li a:hover {
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+
+}
+
+#redes-sociais ul li a.facebook {
+	background: transparent url('../imgs/icons-redes-sociais.png') 0 -31px no-repeat;
+}
+#redes-sociais ul li a.facebook:hover {
+	background: transparent url('../imgs/icons-redes-sociais.png') 0 0 no-repeat;
+}
+
+#redes-sociais ul li a.twitter {
+	background: transparent url('../imgs/icons-redes-sociais.png') -33px -31px no-repeat;
+}
+#redes-sociais ul li a.twitter:hover {
+	background: transparent url('../imgs/icons-redes-sociais.png') -33px 0 no-repeat;
+}
+
+
+#redes-sociais ul li a.google {
+	background: transparent url('../imgs/icons-redes-sociais.png') -65px -31px no-repeat;
+}
+#redes-sociais ul li a.google:hover {
+	background: transparent url('../imgs/icons-redes-sociais.png') -65px 0 no-repeat;
+}
+
+#redes-sociais ul li a.youtube {
+	background: transparent url('../imgs/icons-redes-sociais.png') -97px -31px no-repeat;
+}
+#redes-sociais ul li a.youtube:hover {
+	background: transparent url('../imgs/icons-redes-sociais.png') -97px 0 no-repeat;
+}
+
+#aside-left {
+	float: left;
+	overflow: auto;
+	width:778px;
+}
+#aside-right {
+	float: right;
+	overflow: auto;
+	width:340px;
+	min-height: 1590px;
+}
+
+#box-tools {
+	border: 1px solid #ccc;
+	height: 335px;
+}
+#box-tools p {
+	margin: 45px 0;
+	text-align: center;
+}
+.link-oab, .link-cursos, .link-concursos {
+	width: 95px;
+	height: 70px;
+	background-color: #173D5E;
+	display: block;
+	float: left;
+	margin-left: 13px;
+	color: #fff !important;
+	text-transform: uppercase;
+	font-family: 'Open Sans Bold';
+	font-size: 0.9em;
+	text-align: center;
+	line-height: 77px;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+
+.link-oab:hover, .link-cursos:hover, .link-concursos:hover {
+	background-color: #4481FE;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+
+	-webkit-box-shadow: 6px 6px 1px 1px #CCCCCC;
+	box-shadow: 6px 6px 1px 1px #CCCCCC;
+}
+
+#romper-tv {
+	height: 212px;
+}
+#corpo-docente {
+	height: 512px;
 }
 
 /* Carrossel PROFESSORES  */
+
+
 #container{	
 	margin:0 auto;
 	text-align:left;
 	position:relative;
 	padding:0.1em 0;
 	}
-	
+
+
+
 ul#items{		
 	margin: 0;
 	width:auto;
-	height:265px;
+	height:415px;
 	overflow:hidden;
+	padding: 0 !important;
 	}
 ul#items li{
 	list-style:none;
-	float:left;
-	height:260px;
+	height:198px;
 	overflow:hidden;
-	margin:0 10px;
+	margin: 10px auto;
 	text-align:center;
 	color:#fff;
+	width: 330px;
 	}
 ul#items li:hover{color:#333;}
-ul#items li .image{
-	
-	width:199px;
-	height:208px;
+ul#items li .image{	
+	width:129px;
+	height:152px;
 	overflow:hidden;
+	margin: 0 auto;
 	}	
 ul#items h3{ 
-	font-size: 0.9em;
+	font-size: 0.8em;
 	padding: 5px;
 	-webkit-border-radius: 20px 20px 20px 20px;
 	border-radius: 20px 20px 20px 20px;
 	background-color: #5F9CD4;
 	color:#fff;
 	font-style: italic;
-	max-width: 198px;
+	max-width: 168px;
+	margin: 0 auto; 
 }	
 ul#items .info{color:#999;text-shadow:#f1f1f1 0 1px 0;}	
-ol#pagination{position:relative;text-align:center;}
+ol#pagination{ width: 230px; margin: 0 auto; position:relative;text-align:center; }
 ol#pagination li{
-	display: none;
 	width:16px;
 	height:16px;
 	background:url('../imgs/bg_buttons.png') no-repeat 0 0;
-	text-align:left;
+	text-align:center;
 	text-indent:-8000px;
 	list-style:none;
 	cursor:pointer;
 	margin:0 2px;
+	float: left;
 	}
 ol#pagination li:hover{background:url('../imgs/bg_buttons.png') no-repeat 0 -16px; }
 ol#pagination li.current{color:#f00;font-weight:bold;background:url('../imgs/bg_buttons.png') no-repeat 0 -32px;}
 ol#pagination li.prev, ol#pagination li.next{
 	position:absolute;
-	top:-150px;
+	top:-190px;
+	display: none;
 	}
-ol#pagination li.prev{left:-30px;background:url('../imgs/bg_buttons.png') no-repeat 0 -64px;}
-ol#pagination li.next{right:-30px;background:url('../imgs/bg_buttons.png') no-repeat 0 -48px;}
+ol#pagination li.prev{left:-30px;background:url('../imgs/bg_buttons.png') no-repeat 0 -64px; }
+ol#pagination li.next{right:-30px;background:url('../imgs/bg_buttons.png') no-repeat 0 -48px; }
 
 
 /* Content Site  */
+
+.titulo-padrao {
+	width: 100%;
+	background-color: #245F92;
+	color: #fff !important;
+	font-size: 1.2em !important;
+	font-family: 'Open Sans Bold' !important;
+	text-transform: uppercase;
+	padding-left: 12px !important;
+	margin: 0;
+}
+
+h2.titulo-rompendo {
+	padding: 15px 0;
+	text-align: center;
+	width: 100%;
+	background-color: #245F92;
+	color: #fff !important;
+	font-size: 1.2em !important;
+	font-family: 'Open Sans Bold' !important;
+	text-transform: uppercase;
+	margin: 0;
+}
+
 
 h2.titles-big {
 	width: 100%;
@@ -445,8 +612,62 @@ a.saiba-mais-curso:hover {
 	transition: all 0.3s ease;
 }
 
-
 /* Aulas  */
+
+#aula-experimental {
+	width: 100%;
+	clear: both;
+	overflow: auto;
+}
+
+.aula-item {
+	width: 180px;
+	display: block;
+	float: left;
+	margin-left: 10px;
+}
+.aula-item figure {
+	margin: 0;
+	position: relative;
+	height: 152px;
+}
+.aula-item figcaption {
+	position: absolute;
+	top: 0;
+	width: 180px;
+	height: 152px;
+	text-indent: -9999px;
+	font-family: 'Open Sans Bold' !important;
+}
+
+.aula-item figcaption:hover {
+	background-color: #245F93;
+	opacity: 0.7;
+	text-indent: 0;
+	font-family: 'Open Sans Bold' !important;
+	text-align: center;
+	color: #fff !important;
+	font-size: 1.2em !important;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+.aula-item figcaption span {
+	position: absolute;
+	top: 30px;
+	left: 0;
+	width: 188px;
+	margin: 0;
+	padding: 0;
+	font-family: 'Open Sans Bold' !important;
+}
+
+
+
+
+
 
 .aulas-item {
 	height: 331px;
@@ -506,19 +727,21 @@ a.saiba-mais-curso:hover {
 /* Notícias  */
 
 #noticias {
-	height: 331px;
-	margin-top: 15px;
-
+	margin-top: 10px;
+	padding-bottom: 15px;
+	float: left;
+	min-height: 500px;
+	position: relative;
 }
 
-#noticias .noticias-item a {
+.noticias-item a {
 	display: block;
 	margin-top: 20px;
 	overflow: auto;
 	color: #AAAAAA !important;
 }
 
-#noticias .noticias-item  a:hover {
+.noticias-item  a:hover {
 	color: #256093 !important;
 }
 
@@ -555,6 +778,16 @@ a.saiba-mais-curso:hover {
 	font-size: 0.9em;
 }
 
+/* Concursos */
+#concursos {
+	float: right;
+	margin-top: 10px;
+	padding-bottom: 15px;
+	min-height: 500px;
+	position: relative;
+}
+
+
 /* Depoimentos  */
 
 .content-depoimentos {
@@ -579,84 +812,14 @@ a.saiba-mais-curso:hover {
 
 #footer {
 	width: 100%;
-	min-height: 258px;
-	background: transparent url('../imgs/bg-footer.png') 0 bottom repeat-x;
-	margin-top: 35px;
+	min-height: 218px;
+	background: transparent url('../imgs/bg-footer.png') 0 0 repeat-x;
+	padding-top: 10px;
+	margin: 20px 0 0 0;
 }
 #footer-content {
 	width: 1140px;
 	margin: 0 auto;
-}
-
-#redes-sociais {
-	width: 505px;
-	height: 66px;
-	margin: 0 auto;
-	background: transparent url('../imgs/bg-redes-sociais.png') 0 0 repeat-x;
-	padding-top: 15px;
-}
-#redes-sociais ul {
-	width: 185px;
-	overflow: auto;
-	margin: 0 auto;
-}
-
-#redes-sociais ul li {
-	display: inline-block;;
-	float: left;
-}
-
-#redes-sociais ul li a {
-	display: block;
-	width: 28px;
-	height: 31px;
-	text-indent: -99999px;
-	margin-right: 5px;
-
-	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	-ms-transition: all 0.3s ease;
-	-o-transition: all 0.3s ease;
-	transition: all 0.3s ease;
-}
-
-#redes-sociais ul li a:hover {
-	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	-ms-transition: all 0.3s ease;
-	-o-transition: all 0.3s ease;
-	transition: all 0.3s ease;
-
-}
-
-#redes-sociais ul li a.facebook {
-	background: transparent url('../imgs/icons-redes-sociais.png') 0 0 no-repeat;
-}
-#redes-sociais ul li a.facebook:hover {
-	background: transparent url('../imgs/icons-redes-sociais.png') 0 -31px no-repeat;
-}
-
-
-#redes-sociais ul li a.twitter {
-	background: transparent url('../imgs/icons-redes-sociais.png') -33px 0 no-repeat;
-}
-#redes-sociais ul li a.twitter:hover {
-	background: transparent url('../imgs/icons-redes-sociais.png') -33px -31px no-repeat;
-}
-
-
-#redes-sociais ul li a.google {
-	background: transparent url('../imgs/icons-redes-sociais.png') -65px 0 no-repeat;
-}
-#redes-sociais ul li a.google:hover {
-	background: transparent url('../imgs/icons-redes-sociais.png') -65px -31px no-repeat;
-}
-
-#redes-sociais ul li a.youtube {
-	background: transparent url('../imgs/icons-redes-sociais.png') -97px 0 no-repeat;
-}
-#redes-sociais ul li a.youtube:hover {
-	background: transparent url('../imgs/icons-redes-sociais.png') -97px -31px no-repeat;
 }
 
 #informacoes,#minha-conta,#fale-conosco,#newsletter {
@@ -1050,7 +1213,7 @@ a.ver-todas-simples {
 	display: block;
 	margin: 15px 10px;
 	text-decoration: underline;
-	color:#333;
+	color:#333;o
 	float: right;
 }
 a.ver-todas-simples:hover {
