--- a/assets/css/default_slider.css
+++ b/assets/css/default_slider.css
@@ -3,23 +3,23 @@
  */
 
 .sliders{
-	position:absolute;
+	position:relative;
 	max-height:336px;
-	width:100%;
+	width:777px;
 	overflow:hidden;
-	bottom: 0px !important;
+	display: block;
 }
 .sliders ul {
 	visibility:hidden;
 }
 .slider-title{
-	font-size:2.4em;
+	font-size:1.6em;
 	font-weight:300;
 	line-height:1em;
 
 }
 .slider-paragraph{
-	font-size:1em;
+	font-size:0.8em;
 	line-height:1.4em;
 
 }
