--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -145,6 +145,69 @@ hr.line {
 	float: left !important;
 }
 
+
+#button-area-aluno {
+	background: transparent url('../imgs/icon-login.png') 20px 6px no-repeat;
+	border: 1px solid white;
+	padding: 5px 45px 5px 55px;
+	top: 7px;
+	right: 28px;
+	text-transform: uppercase;
+	color: #fff !important;
+	font-family: 'Segoe UI Light_', 'Open Sans Light', Verdana, Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	letter-spacing: 1px;
+	position: absolute;
+	text-shadow: none !important;
+}
+
+#login-aluno {
+	position: relative;
+}
+
+#login-aluno #form-aluno {
+	display: none;
+	z-index: 10;
+	width: 300px;
+	position: absolute;
+	right: 28px;
+	background-color: #417DB2;
+	top: 37px;
+	padding: 0 15px 15px 15px;
+	border: 1px solid white;
+}
+
+#form-aluno .links-login {
+	width: 150px;
+	display: inline-block !important;
+	float: left !important;
+}
+
+#form-aluno .crie-conta {
+	color: #fff !important;
+	text-decoration: underline;
+}
+.esqueceu-senha:hover, .crie-conta:hover {
+	text-decoration: none !important;
+}
+#form-aluno .esqueceu-senha {
+	text-decoration: underline;
+	color: #fff !important;
+}
+#form-aluno input[type="submit"]{
+	float: right;
+}
+#form-aluno input[type="text"], input[type="password"]{
+	font-size: 0.9em;
+
+}
+.titulo-login-area {
+	color: #fff !important;
+	margin: 0;
+	padding: 10px 0 !important;
+	font-family: 'Segoe UI Light_', 'Open Sans Light', Verdana, Arial, Helvetica, sans-serif !important;
+	font-weight: bold !important;
+}
 /* Phones landscape*/
 
 @media only screen and (max-width: 1024px) {
@@ -388,12 +451,103 @@ hr.line {
 }
 
 #romper-tv {
-	height: 212px;
+	height: 224px;
 }
 #corpo-docente {
-	height: 512px;
+	height: 500px;
+}
+#shopp-cart {
+	position: absolute;
+	width: 270px;
+	left: 530px;
+	height: 40px;
+	padding-top: 8px;
+	margin-top: 5px;
+	cursor: pointer;
 }
 
+#icon-carrinho {
+	width: 27px;
+	height: 25px;
+	background: transparent url('../imgs/icon-carrinho.png') 0 0 no-repeat;
+	float: left;
+}
+#texto-carrinho {
+	float: left;
+	color: #fff;
+	padding: 0 0 0 7px;
+}
+#itens-carrinho {
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+	padding: 7px;
+	background-color: #5794CB;
+	margin-left: 10px;
+	color: #fff !important;
+	margin-top: 17px !important;
+}
+#itens-do-carrinho {
+	display: none;
+	position: absolute;
+	z-index: 999999;
+	top: 37px;
+	background-color: #417DB2;
+	list-style: none !important;
+	width: 320px;
+	margin: 0;
+	padding: 8px 0;
+	-webkit-border-radius: 0px 0px 5px 5px;
+	border-radius: 0px 0px 5px 5px;
+}
+#itens-do-carrinho ul {
+	list-style: none !important;
+	margin: 0;
+	padding: 0 5px;
+}
+
+#itens-do-carrinho ul li {
+	display: block !important;
+	padding: 0 !important;
+}
+
+#itens-do-carrinho ul li a {
+	color: #fff !important;
+	font-size: 0.8em;
+	display: block !important;
+	padding: 8px 8px !important;
+	border-bottom: 1px solid white;
+	margin: 0 !important;
+}
+
+#itens-do-carrinho ul li a:hover {
+	background-color: #fff !important;
+	color: #417DB2 !important;
+}
+
+#arrow-down {
+	width: 23px;
+	height: 11px;
+	background: transparent url('../imgs/arrow-down.png') 0 0 no-repeat;
+	float: right;
+	margin-right: 45px;
+	margin-top: 5px;
+}
+
+#ir-para-carrinho {
+	background-color: #fff;
+	-webkit-border-radius: 25px;
+	border-radius: 25px;
+	width: 96%;
+	padding: 8px 10px;
+	margin: 10px auto 0 auto;
+	display: block;
+	text-align: center;
+	color: #417DB2 !important;
+}
+#ir-para-carrinho:hover {	
+	background-color: #173D5E !important;
+	color: #fff !important;
+}
 /* Carrossel PROFESSORES  */
 
 
