--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -733,6 +733,38 @@ h2.title-tv {
 	line-height: 1.2;
 }
 
+.twitter-widget ul {
+	margin: 0;
+	padding: 0;
+}
+.twitter-widget li {
+	list-style: none;
+	clear: both;
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 10px;
+	overflow: auto;
+}
+.twitter-widget li img, .twitter-widget li .tweets_txt {
+	float: left;
+	margin-bottom: 10px;
+}
+.twitter-widget li img {
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	border-radius: 30px;
+}
+.twitter-widget li .tweets_txt {
+	width: 300px;
+	margin-left: 10px;
+	font-size: 0.9em;
+}
+.twitter-widget li .tweets_txt span {
+	font-style: italic;
+	color: #666;
+	display: block;
+	font-size: 0.7em;
+}
+
 .footer-curso {
 	position: absolute;
 	bottom: 5%;
