--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -1003,15 +1003,16 @@ a.saiba-mais-curso:hover {
 /* Footer  */
 
 #footer {
-	width: 100%;
+	width: 1140px;
 	min-height: 218px;
 	background: transparent url('../imgs/bg-footer.png') 0 0 repeat-x;
 	padding-top: 10px;
-	margin: 20px 0 0 0;
+	margin: 20px auto 0 auto;
 }
 #footer-content {
 	width: 1140px;
 	margin: 0 auto;
+	padding: 10px 15px;
 }
 
 #informacoes,#minha-conta,#fale-conosco,#newsletter {
